--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,2 +1,3 @@
-<h1>Categories#edit</h1>
-<p>Find me in app/views/categories/edit.html.erb</p>
+# <!-- app/views/categories/edit.html.erb -->
+<h1>Edit Category</h1>
+<%= render 'form' %>
