Add view for CategoriesController show action

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Categories#show</h1>
-<p>Find me in app/views/categories/show.html.erb</p>
+# <!-- app/views/categories/show.html.erb -->
+<h1><%= @category.name %></h1>
+<p>Description: <%= @category.description %></p>
+
+<%= link_to 'Edit', edit_category_path(@category) %> |
+<%= link_to 'Back', categories_path %>
