--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Products#index</h1>
-<p>Find me in app/views/products/index.html.erb</p>
+# <!-- app/views/products/index.html.erb -->
+<h1>Product List</h1>
+<ul>
+  <% @products.each do |product| %>
+    <li>
+      <%= link_to product.name, product %><br>
+      Description: <%= product.description %><br>
+      Price: $<%= product.price %>
+    </li>
+  <% end %>
+</ul>
