--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Products#show</h1>
-<p>Find me in app/views/products/show.html.erb</p>
+# <!-- app/views/products/show.html.erb -->
+<h1><%= @product.name %></h1>
+<p>Description: <%= @product.description %></p>
+<p>Price: $<%= @product.price %></p>
+
+<%= link_to 'Edit', edit_product_path(@product) %> |
+<%= link_to 'Back', products_path %>
