Add edit view on products controller

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,2 +1,7 @@
-<h1>Products#edit</h1>
-<p>Find me in app/views/products/edit.html.erb</p>
+# <!-- app/views/products/new.html.erb -->
+<h1>New Product</h1>
+<%= render 'form' %>
+
+<!-- app/views/products/edit.html.erb -->
+<h1>Edit Product</h1>
+<%= render 'form' %>
