Move form for editing product from new to the edit view

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,7 +1,3 @@
-# <!-- app/views/products/new.html.erb -->
-<h1>New Product</h1>
-<%= render 'form' %>
-
-<!-- app/views/products/edit.html.erb -->
+# <!-- app/views/products/edit.html.erb -->
 <h1>Edit Product</h1>
 <%= render 'form' %>
