--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,14 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+# !-- app/views/users/new.html.erb -->
+<h1>Create an Account</h1>
+<%= form_for @user do |f| %>
+  <%= f.label :email %>
+  <%= f.email_field :email %>
+  
+  <%= f.label :password %>
+  <%= f.password_field :password %>
+  
+  <%= f.label :password_confirmation %>
+  <%= f.password_field :password_confirmation %>
+  
+  <%= f.submit 'Create Account' %>
+<% end %>
