--- a/app/views/addresses/new.html.erb
+++ b/app/views/addresses/new.html.erb
@@ -1,2 +1,4 @@
-<h1>Addresses#new</h1>
-<p>Find me in app/views/addresses/new.html.erb</p>
+# <!-- app/views/addresses/new.html.erb -->
+<h1>Add a New Shipping Address</h1>
+<%= render 'form' %>
+<%= link_to 'Back', addresses_path %>
