--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Orders#index</h1>
-<p>Find me in app/views/orders/index.html.erb</p>
+# <!-- app/views/orders/index.html.erb -->
+<h1>Your Order History</h1>
+<ul>
+  <% @orders.each do |order| %>
+    <li>
+      <%= link_to "Order ##{order.id}", order %><br>
+      Order Date: <%= order.created_at %><br>
+      Total: $<%= order.total %>
+    </li>
+  <% end %>
+</ul>
