--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Orders#show</h1>
-<p>Find me in app/views/orders/show.html.erb</p>
+# <!-- app/views/orders/show.html.erb -->
+<h1>Order Details</h1>
+<p>Order #: <%= @order.id %></p>
+<p>Order Date: <%= @order.created_at %></p>
+# <!-- Display other order details here -->
