--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,2 +1,4 @@
-<h1>Orders#new</h1>
-<p>Find me in app/views/orders/new.html.erb</p>
+# <!-- app/views/orders/new.html.erb -->
+<h1>Create a New Order</h1>
+<%= render 'form' %>
+<%= link_to 'Back', orders_path %>
