--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,2 +1,4 @@
-<h1>Reviews#new</h1>
-<p>Find me in app/views/reviews/new.html.erb</p>
+# <!-- app/views/reviews/new.html.erb -->
+<h1>Add a New Product Review</h1>
+<%= render 'form' %>
+<%= link_to 'Back', reviews_path %>
