--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,2 +1,8 @@
-<h1>Reviews#show</h1>
-<p>Find me in app/views/reviews/show.html.erb</p>
+# <!-- app/views/reviews/show.html.erb -->
+<h1>Product Review</h1>
+<p>Review by: <%= @review.user.username %></p>
+<p>Rating: <%= @review.rating %></p>
+<p>Review:</p>
+<p><%= @review.content %></p>
+<p>Published on: <%= @review.created_at.strftime('%B %d, %Y') %></p>
+<%= link_to 'Back', reviews_path %>
