--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,2 +1,29 @@
-<h1>Carts#show</h1>
-<p>Find me in app/views/carts/show.html.erb</p>
+# <!-- app/views/carts/show.html.erb -->
+
+<h1>Your Shopping Cart</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Product</th>
+      <th>Quantity</th>
+      <th>Price</th>
+      <th>Subtotal</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @cart.cart_items.each do |cart_item| %>
+      <tr>
+        <td><%= cart_item.product.name %></td>
+        <td><%= cart_item.quantity %></td>
+        <td><%= number_to_currency(cart_item.product.price) %></td>
+        <td><%= number_to_currency(cart_item.subtotal) %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<p>Total Price: <%= number_to_currency(@total_price) %></p>
+
+<%= link_to "Checkout", checkout_cart_path, class: "button" %>
+
