Create view for product added to cart confirmation

--- a/app/views/carts/add_to_cart.html.erb
+++ b/app/views/carts/add_to_cart.html.erb
@@ -1,2 +1,4 @@
-<h1>Carts#add_to_cart</h1>
-<p>Find me in app/views/carts/add_to_cart.html.erb</p>
+<h1>Product Added to Cart</h1>
+<p>Your selected product has been added to your cart.</p>
+<%= link_to "Continue Shopping", root_path, class: "btn btn-primary" %>
+<%= link_to "View Cart", cart_path, class: "btn btn-success" %>
