--- a/app/views/carts/update_cart.html.erb
+++ b/app/views/carts/update_cart.html.erb
@@ -1,2 +1,4 @@
-<h1>Carts#update_cart</h1>
-<p>Find me in app/views/carts/update_cart.html.erb</p>
+<h1>Cart Updated</h1>
+<p>Your cart has been updated.</p>
+<%= link_to "Continue Shopping", root_path, class: "btn btn-primary" %>
+<%= link_to "View Cart", cart_path, class: "btn btn-success" %>
