Create view for payment confirmation

--- a/app/views/payments/create.html.erb
+++ b/app/views/payments/create.html.erb
@@ -1,2 +1,3 @@
-<h1>Payments#create</h1>
-<p>Find me in app/views/payments/create.html.erb</p>
+<h1>Payment Successful</h1>
+<p>Your payment was successful.</p>
+# <!-- Additional order details, confirmation messages, etc. can be displayed here -->
