Create view for displaying shipment details

--- a/app/views/shipments/show.html.erb
+++ b/app/views/shipments/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Shipments#show</h1>
-<p>Find me in app/views/shipments/show.html.erb</p>
+<h1>Shipment Details</h1>
+<p>Shipment ID: <%= @shipment.id %></p>
+# <!-- Display other shipment details here, e.g., tracking information, delivery status, etc. -->
