--- a/app/views/admins/edit.html.erb
+++ b/app/views/admins/edit.html.erb
@@ -1,2 +1,8 @@
-<h1>Admin#edit</h1>
-<p>Find me in app/views/admin/edit.html.erb</p>
+<h1>Edit Product/Category</h1>
+
+<%= form_for @product_or_category, url: admin_update_path, method: :patch do |f| %>
+  <!-- Form fields for editing an existing product or category -->
+  <!-- Customize the form as needed -->
+
+  <%= f.submit "Update" %>
+<% end %>
