--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,13 @@
-# !-- app/views/users/new.html.erb -->
 <h1>Create an Account</h1>
 <%= form_for @user do |f| %>
-  <%= f.label :email %>
+   <%= f.label :email %>
   <%= f.email_field :email %>
+
+  <%= f.label :first_name %>
+  <%= f.text_field :first_name %>
+
+  <%= f.label :last_name %>
+  <%= f.text_field :last_name %>
   
   <%= f.label :password %>
   <%= f.password_field :password %>
