Comment out line that is supposed to provide more info to other developers

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
     <li>
       Order Date: <%= order.created_at %><br>
       Total: $<%= order.total %><br>
-      <!-- Display other order details as needed -->
+      # <!-- Display other order details as needed -->
     </li>
   <% end %>
 </ul>
