--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-# <!-- app/views/users/show.html.erb -->
+
 <h1>Your Profile</h1>
 <p>Email: <%= @user.email %></p>
 
@@ -8,7 +8,7 @@
     <li>
       Order Date: <%= order.created_at %><br>
       Total: $<%= order.total %><br>
-      # <!-- Display other order details as needed -->
+      # Display other order details as needed
     </li>
   <% end %>
 </ul>
