--- a/app/views/shipments/edit.html.erb
+++ b/app/views/shipments/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Edit Shipment</h1>
 <%= form_for @shipment, url: shipment_path(@shipment), method: :patch do |f| %>
-  <!-- Shipment editing form fields go here -->
-  <!-- Allow admin users to modify shipment information, e.g., tracking info, delivery address, etc. -->
+  # <!-- Shipment editing form fields go here -->
+  # <!-- Allow admin users to modify shipment information, e.g., tracking info, delivery address, etc. -->
   <%= f.submit "Update Shipment" %>
 <% end %>
