--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,4 +1,9 @@
-<h1>Products#new</h1>
-# app/views/products/new.html.erb
-<h1>New Product</h1>
-<%= render 'form' %>
+<h1>New product</h1>
+
+<%= render "form", product: @product %>
+
+<br>
+
+<div>
+  <%= link_to "Back to products", products_path %>
+</div>
