--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,3 +1,10 @@
-# <!-- app/views/products/edit.html.erb -->
-<h1>Edit Product</h1>
-<%= render 'form' %>
+<h1>Editing product</h1>
+
+<%= render "form", product: @product %>
+
+<br>
+
+<div>
+  <%= link_to "Show this product", @product %> |
+  <%= link_to "Back to products", products_path %>
+</div>
