--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,10 @@
-# <!-- app/views/products/show.html.erb -->
-<h1><%= @product.name %></h1>
-<p>Description: <%= @product.description %></p>
-<p>Price: $<%= @product.price %></p>
+<p style="color: green"><%= notice %></p>
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+<%= render @product %>
+
+<div>
+  <%= link_to "Edit this product", edit_product_path(@product) %> |
+  <%= link_to "Back to products", products_path %>
+
+  <%= button_to "Destroy this product", @product, method: :delete %>
+</div>
