--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -25,5 +25,5 @@
  </tfoot>
  </table>
 <%= button_to 'Empty Cart', cart, method: :delete,
-class: 'ml-4 rounded-lg py-1 px-2 text-white bg-green-600' %>
+class: 'ml-4 rounded-lg py-1 px-2' %>
 </div>
