--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,18 +17,21 @@
    </header>
 
    <section class="flex">
-   <nav class="bg-green-900 p-6">
-   <ul class="text-gray-300 leading-8">
-   <li><a href="/">Home</a></li>
-   <li><a href="/questions">Questions</a></li>
-   <li><a href="/news">News</a></li>
-   <li><a href="/contact">Contact</a></li>
-   </ul>
-   </nav>
+        <nav class="bg-green-900 p-6">
+            <div id="cart" class="bg-white rounded p-2">
+                    <%= render @cart %>
+            </div>
+            <ul class="text-gray-300 leading-8">
+            <li><a href="/">Home</a></li>
+            <li><a href="/Catalog">Catalog</a></li>
+            <li><a href="/Categories">Categories</a></li>
+            <li><a href="/contact">Contact</a></li>
+            </ul>
+        </nav>
 
-    <main class="container mx-auto mt-4 px-5 flex">
-    <%= yield %>
-    </main>
+        <main class="container mx-auto mt-4 px-5 flex">
+            <%= yield %>
+        </main>
     </section>
 </body>
 </html>
