--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -1,5 +1,10 @@
 <div id="<%= dom_id line_item %>">
+    <% if line_item == @current_item %>
+    <tr class="line-item-highlight">
+    <% else %>
     <tr>
+    <% end %>
+
     <td class="text-right"><%= line_item.quantity %></td>
     <td>&times;</td>
     <td class="pr-2">
