--- a/app/views/store/_product.html.erb
+++ b/app/views/store/_product.html.erb
@@ -3,7 +3,7 @@
     <%= image_tag(product.image_url,
     class: 'object-contain w-40 h-48 shadow mr-6') %>
     <div>
-    <h2 class="font-bold text-lg mb-3"><%= product.title %></h2>
+    <h2 class="font-bold text-lg mb-3"><%= product.name %></h2>
     <p>
     <%= sanitize(product.description) %>
     </p>
@@ -13,7 +13,7 @@
     line_items_path(product_id: product),
     form_class: 'inline',
     class: 'ml-4 rounded-lg py-1 px-2
-    text-white bg-green-600' %>
+ bg-green-600' %>
     </div>
     </div>
     </li>
