Update the application view layout to use the new logo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 </head>
 <body>
    <header class="bg-green-700">
-   <%= image_tag 'techsol.jpeg', alt: 'Techsol e-Shop' %>
+   <%= image_tag 'techsol.png', alt: 'Techsol e-Shop' %>
    <h1><%= @page_title %></h1>
    </header>
 
